--- a/intranet-sudesb/index.html
+++ b/intranet-sudesb/index.html
@@ -22,14 +22,14 @@
             </div>
             <div class="menu-container">
                     <ul id="ul-principal">
-                        <li class="li-p">
+                        <li class="li-p" >
 
                             <a class="botao" href="javascript://">
                                 <img id="menu-img" src="img/cardapio.png" width="20px" alt="icone do menu">
                             </a>
 
                             <ul class="ul-sub">
-                                <li><a class="link-sub-menu" href="https://portaldefacilidades.ba.gov.br/#/" target="_blank">Prodeb</a></li>
+                                <li><a class="link-sub-menu" href="https://portaldefacilidades.ba.gov.br/#/" target="_blank">Portal de Facilidades</a></li>
                                 <li><a class="link-sub-menu" href="https://dool.egba.ba.gov.br" target="_blank">Diario Oficial</a></li>
                                 <li><a class="link-sub-menu" href="https://www.comprasnet.ba.gov.br" target="_blank">ComprasNet</a></li>
                             </ul>
@@ -40,6 +40,7 @@
         </nav>
     </header>
     <main>
+        
         <h1>Bem vindos(as) ao Intranet da SUDESB</h1>
         <hr>
         <h2>Escolha a categoria abaixo:</h2>
@@ -70,7 +71,7 @@
                 </div>
             </a>
 
-            <a class="link-shadow" href="ramais/index.html" target="_blank">
+            <a class="link-shadow" href="ramais/index.html" target="_self">
                 <div class="shadow">
                     <div class="caixas" id="caixa-4">
                         <p class="legenda-2">Ramais</p>
@@ -78,7 +79,7 @@
                 </div>
             </a>
 
-            <a href="http://10.83.246.10/gestor_sepromi/Home/Login.php#" target="_blank">
+            <a href="pag-erro/construcao.html" target="_self">
                 <div class="shadow">
                         <div class="caixas" id="caixa-5">
                             <p class="legenda">Gestão de diárias</p>
@@ -86,7 +87,7 @@
                 </div>
             </a>
             
-            <a href="pag-erro/construcao.html">
+            <a href="pag-erro/construcao.html" target="_self">
                 <div class="shadow">
                     <div class="caixas" id="caixa-8">
                         <p class="legenda-2">Alterar e Solicitar E-mail</p>
@@ -94,7 +95,7 @@
                 </div>
             </a>
 
-            <a href="pag-erro/construcao.html">
+            <a href="pag-erro/construcao.html" target="_self">
                 <div class="shadow">
                     <div class="caixas" id="caixa-10">
                         <p class="legenda-2">Chamados TI</p>
@@ -102,7 +103,7 @@
                 </div>
             </a>
 
-            <a href="pag-erro/construcao.html">
+            <a href="pag-erro/construcao.html" target="_self">
                 <div class="shadow">
                     <div class="caixas" id="caixa-11">
                         <p class="legenda-2">Solicitação de material</p>
@@ -110,7 +111,7 @@
                 </div>
             </a>
 
-            <a href="pag-erro/construcao.html">
+            <a href="pag-erro/construcao.html" target="_self">
                 <div class="shadow">
                     <div class="caixas" id="caixa-12">
                         <p class="legenda-2">Solicitação de veículos</p>
