--- a/intranet-sudesb/pag-erro/construcao.html
+++ b/intranet-sudesb/pag-erro/construcao.html
@@ -10,6 +10,7 @@
     <title>SEPROMI</title>
 </head>
 <body>
+    <div id="return"><a href="../index.html"><img src="../ramais/img/back.png" width="500%" alt="icone de retorno"></a></div>
     <main>
         <div class="icone-erro">
             <img src="img/manutencao.png" width="10%" alt="Em construção">
