atualizando chamados TI

--- a/intranet-sudesb/index.html
+++ b/intranet-sudesb/index.html
@@ -95,7 +95,7 @@
                 </div>
             </a>
 
-            <a href="pag-erro/construcao.html" target="_self">
+            <a href="http://10.46.12.12/scs/login" target="_blank">
                 <div class="shadow">
                     <div class="caixas" id="caixa-10">
                         <p class="legenda-2">Chamados TI</p>
