--- a/intranet-sudesb/ramais/index.html
+++ b/intranet-sudesb/ramais/index.html
@@ -19,7 +19,7 @@
         </div>
         <button id="dicas">Dicas telefônicas</button >
             <dialog>
-                <p class="popup">FLASH + RAMAL = transferir a ligação para o ramal desejado. <br> <br> ***** + RAMAL = puxar ligação. <br> <br> ***** + RAMAL = ligação externa.</p>
+                <p class="popup">FLASH + RAMAL = transferir a ligação para o ramal desejado. <br> <br> 16 + RAMAL = puxar ligação. <br> <br> 2 + Telefone = ligação externa.</p>
                 <div class="popup"><button id="saida">OK</button></div>
             </dialog>
     </header>
