--- a/nana/index.html
+++ b/nana/index.html
@@ -11,17 +11,19 @@
 </head>
 <body>
     <header>
-        <img id="logomarca" src="imagens/nana-logo.png" width="30%" alt="Logomarca Nana">
+        <img id="logomarca" src="imagens/nana-logo-name.png" width="30%" alt="Logomarca Nana">
         <nav>
             <a href="index.html" target="_self"><img id="home" src="imagens/home.png" width="20px" alt="icone home"></a>
-            <a href="#"><p>Anamnese</p></a>
-            <a href="#"><p>Login</p></a>
+            <a href="paginas/anamnese.html"><p>Anamnese</p></a>
+            <a href="paginas/login.html"><p>Login</p></a>
         </nav>
     </header>
 
         <section class="imagem" id="img01">
-            <div><img id="logomarca-2" src="imagens/nana-logo.png" width="50%" alt="Logomarca Nana"></div>
-            <p id="texto-section-1">Salvador Shopping | Shopping Barra | Horto Florestal</p>
+            <div><img id="logomarca-2" src="imagens/nana-logo-name.png" width="50%" alt="Logomarca Nana"></div>
+            <div id="texto-section-1">
+                <p class="unidades">Salvador Shopping</p> | <p class="unidades">Shopping Barra</p> | <p class="unidades">Horto Florestal</p>
+            </div>
         </section>
 
         <section class="normal">
@@ -40,23 +42,23 @@
 
         <section class="normal">
             <h3>CONTATOS</h3>
-            <div class="midias">
-                <div class="moviment">
-                    <a href="https://www.instagram.com/salaonanabelezaebemestar/" target="_blank">
-                        <img src="imagens/instagram.png" width="40px" alt="Instagram">
-                    </a>
-                </div>
-
-                <div class="moviment">
-                    <a href="https://www.facebook.com/salaonana/" target="_blank">
-                        <img src="imagens/facebook.png" width="40px" alt="Facebook">
-                    </a>
-                </div>
-
-                <div class="moviment">
-                    <a href="#">
-                        <img src="imagens/whatsapp.png" width="40px" alt="Whatsapp">
-                    </a>
+            <div class="bordas">
+                <div class="midias">
+                    <div class="moviment">
+                        <a href="https://www.instagram.com/salaonanabelezaebemestar/" target="_blank">
+                            <img class="redes-sociais" src="imagens/instagram.png" width="40px" alt="Instagram">
+                        </a>
+                    </div>
+                    <div class="moviment">
+                        <a href="https://www.facebook.com/salaonana/" target="_blank">
+                            <img class="redes-sociais" src="imagens/facebook.png" width="40px" alt="Facebook">
+                        </a>
+                    </div>
+                    <div class="moviment">
+                        <a href="#">
+                            <img class="redes-sociais" src="imagens/whatsapp.png" width="40px" alt="Whatsapp">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
