atualizando projeto Nana

--- a/nana/index.html
+++ b/nana/index.html
@@ -14,8 +14,8 @@
         <img id="logomarca" src="imagens/nana-logo-name.png" width="30%" alt="Logomarca Nana">
         <nav>
             <a href="index.html" target="_self"><img id="home" src="imagens/home.png" width="20px" alt="icone home"></a>
-            <a href="paginas/anamnese.html"><p>Anamnese</p></a>
-            <a href="paginas/login.html"><p>Login</p></a>
+            <a href="paginas/anamnese/anamnese.html"><p>Anamnese</p></a>
+            <a href="paginas/login/login.html"><p>Login</p></a>
         </nav>
     </header>
 
