--- a/nana/paginas/anamnese/anamnese.html
+++ b/nana/paginas/anamnese/anamnese.html
@@ -133,7 +133,7 @@
                         <br>
                         <div class="campo-3">
                             <label for="itratamento">Qual o tipo de tratamento o(a) cliente deseja utilizar?</label> <br> <br>
-                            <input type="text" name="tratamento" id="itratamento" placeholder="Digite o tratamento desejado" required>
+                            <input type="text" name="tratamento" id="itratamento" placeholder="Digite o tratamento desejado">
                         </div>
 
                     </fieldset>
