--- a/nana/paginas/login/login.html
+++ b/nana/paginas/login/login.html
@@ -43,7 +43,7 @@
                 </div>
                 <div id="links">
                     <a href="#">Esqueceu sua senha?</a> <br>
-                    <a href="#">Não tem cadastro? Clique aqui!</a>
+                    <a href="cadastro/cadastro.html">Não tem cadastro? Clique aqui!</a>
                 </div>
             </section>
         </div>
