--- a/user/index.html
+++ b/user/index.html
@@ -17,9 +17,9 @@
            <a id="sair" href="">Exit</a>
         </nav>
     </header>
-    <main>
+    <section>
         <h1>Seja Bem Vindo(a)</h1>
-    </main>
+    </section>
     <aside>
         <picture>
             <div id="foto-perfil">
@@ -27,7 +27,7 @@
             </div>
         </picture>
 
-        <ul>
+        <ul> 
             <a href="">
                 <li>Realizar Anamnese</li>
             </a>
