--- a/nana/index.html
+++ b/nana/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/desktop.css">
     <link rel="shortcut icon" href="imagens/nana-icone.ico" type="image/x-icon">
-    <title>Nana Salão de Beleza</title>
+    <title>Nana Salão de Beleza teste</title>
 </head>
 <body>
         <!-- cabeçalho -->
