--- a/nav 2/index.html
+++ b/nav 2/index.html
@@ -16,7 +16,7 @@
     <header id="casa"> 
         <nav>
             <picture href="#" class="logo">
-                <img src="nana-logo-name.png" width="120" alt="logo do Nana">
+                <a href=""><img src="nana-logo-name.png" width="120" alt="logo do Nana"></a>
             </picture>
             <div class="menu-container">
                 <ul id="ul-principal">
