--- a/projetos/plataforma-sudesb/index.html
+++ b/projetos/plataforma-sudesb/index.html
@@ -16,26 +16,28 @@
     <header id="casa"> 
         <div class="teste">
             <nav>
-                <picture class="logo">
-                    <a href=""><img src="img/SUDESB-BRANCO.png" width="150" alt="logo da SUDESB"></a>
-                </picture>
-                <div class="menu-container">
-                    <ul id="ul-principal">
-                        <li class="li-p" >
-                            <a class="botao" href="javascript://">
-                                <div class="box-bottom">
-                                    <img id="menu-img" src="img/cardapio.png" width="25px" alt="icone do menu">
-                                </div>
-                            </a>
-                            <ul class="ul-sub">
-                                <li><a href="#casa"        class="link-sub-menu">Instagram SUDESB</a></li>
-                                <li><a href="#img02"       class="link-sub-menu">Governo do Estado</a></li>
-                                <li><a href="#historia"    class="link-sub-menu">Receita Federal</a></li>
-                                <li><a href="#agendamento" class="link-sub-menu">ComprasNet</a></li>
-                                <li><a href="#img03"       class="link-sub-menu">Ambiente</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                <div class="aba">
+                        <ul id="ul-principal">
+                            <li class="li-p" >
+                                <a class="botao" href="javascript://">
+                                    <div class="box-bottom">
+                                        <img id="menu-img" src="img/cardapio.png" width="25px" alt="icone do menu">
+                                    </div>
+                                </a>
+                                <ul class="ul-sub">
+                                    <li><a href="#casa"        class="link-sub-menu">Instagram SUDESB</a></li>
+                                    <li><a href="#img02"       class="link-sub-menu">Governo do Estado</a></li>
+                                    <li><a href="#historia"    class="link-sub-menu">Receita Federal</a></li>
+                                    <li><a href="#agendamento" class="link-sub-menu">ComprasNet</a></li>
+                                    <li><a href="#img03"       class="link-sub-menu">Ambiente</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <div class="logo">
+                            <picture >
+                                <a href=""><img src="img/SUDESB-BRANCO.png" width="150" alt="logo da SUDESB"></a>
+                            </picture>
+                        </div>
                 </div>
             </nav>
         </div>
