novo estilo sistema de ramais

--- a/ramais/index.html
+++ b/ramais/index.html
@@ -349,8 +349,8 @@
         <footer>
             <ul id="rodape">
                 <li id="sudesb-rodape"><strong><a href="">SUDESB</a></strong></li>
-                <li>Sistema de Listagem de Ramais</li>
-                <li>&copy; Copyright 2023</li>
+                <li class="copy">Sistema de Listagem de Ramais</li>
+                <li class="copy">&copy; Copyright 2023</li>
             </ul>
         </footer>
     <script src="js/search.js"></script>
