--- a/plataforma-sudesb-new/index.html
+++ b/plataforma-sudesb-new/index.html
@@ -14,7 +14,7 @@
 </head>
 <body> 
     <header>
-        <nav>
+        <nav> 
             <ul>
                 <li><a href="http://www.sudesb.ba.gov.br" target="_blank"><img id="logo" src="img/SUDESB-BRANCO.png" width="140" alt="logo da SUDESB"></a></li>
                 <li>
@@ -22,7 +22,7 @@
                             <ul id="ul-principal">
                                 <li class="li-p" >
                                     <a class="botao" href="javascript://">
-                                        <p style="color: white; font-weight: bold;">Menu</p>
+                                        <div id="menu-caixa"><img id="menu" src="img/cardapio.png" width="25" alt="menu"></div>
                                     </a>
                                     <ul class="ul-sub">
                                         <li><a class="link-sub-menu" href="https://www.instagram.com/sudesbesporte/?hl=pt" target="_blank">Instagram SUDESB</a></li>
