aplicando novo design

--- a/busca/index.html
+++ b/busca/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul id="logomarca">
                 <li><a href="http://www.sudesb.ba.gov.br" target="_blank"><img src="img/SUDESB-BRANCO.png" alt="Logo da SUDESB" width="120" id="logo"></a></li>
             </ul>
-        </nav>
+        
         <button id="dicas">Cadastrar E-mail</button>
         <dialog>
             <div id="dfPessoas">
@@ -71,6 +71,7 @@
 
             <div class="popup"><button id="saida">Fechar</button></div>
         </dialog>
+        </nav>
     </header>
  
     <main>
@@ -100,9 +101,13 @@
         </div>
     </main>
 
-<footer>
-    <p class="texto-footer">Desenvolvido por Lucas Lion da T.I da <a target="_blank" href="http://www.sudesb.ba.gov.br">SUDESB</a></p>
-</footer>
+    <footer>
+        <ul id="rodape">
+            <li id="sudesb-rodape"><strong><a href="">SUDESB</a></strong></li>
+            <li class="copy">Sistema de Listagem de Ramais</li>
+            <li class="copy">&copy; Copyright 2023</li>
+        </ul>
+    </footer>
     
 <script type="text/javascript" src="./js/cadastro.js"></script>
 <script src="js/search.js"></script>
