--- a/inventário-TI/login/login.html
+++ b/inventário-TI/login/login.html
@@ -43,16 +43,20 @@
                         <p>
                             <input id="envio" type="submit" value="Entrar">
                         </form>
-                </div>
+                </div> <br>
                 <div id="links">
-                    <a href="#">Esqueceu sua senha?</a> <br>
-                    <a href="#">Não tem cadastro? Clique aqui!</a>
+                    <p style="color: var(--ENVIO-HOVER);">&copy; Copyright 2023</p>
                 </div>
             </section>
         </div>
     </main>
+    
     <footer>
-        <p>Desenvolvido pela equipe de tecnologia da <a href="http://www.sudesb.ba.gov.br" target="_blank"><strong>SUDESB</strong></a></p>
+        <ul id="rodape">
+            <li id="sudesb-rodape"><strong><a href="http://www.sudesb.ba.gov.br" target="_blank">SUDESB</a></strong></li>
+            <li>Desenvolvido por Lucas Lion - Equipe de Informática</li>
+            <li>&copy; Copyright 2023</li>
+        </ul>
     </footer>
 </body>
 </html>
