--- a/plataforma-sudesb-new/index.html
+++ b/plataforma-sudesb-new/index.html
@@ -62,78 +62,89 @@
       </strong>
     </div>
 
-    <div class="container d-flex flex-row flex-wrap justify-content-evenly gap-4 teste">
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/email.png" alt="email">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">E-mail</h5>
-          <a href="https://login.microsoftonline.com/common/oauth2/authorize?client_id=00000002-0000-0ff1-ce00-000000000000&redirect_uri=https%3a%2f%2foutlook.office.com%2fowa%2f&resource=00000002-0000-0ff1-ce00-000000000000&response_mode=form_post&response_type=code+id_token&scope=openid&msafed=1&msaredir=1&client-request-id=d5c08df9-778d-2ec4-6bda-454af32d52a7&protectedtoken=true&claims=%7b%22id_token%22%3a%7b%22xms_cc%22%3a%7b%22values%22%3a%5b%22CP1%22%5d%7d%7d%7d&nonce=638261586332567612.5bb1f899-edab-46dd-a174-7dfa7b3180da&state=Dcs7EoAwCABRouNxMCEfSI4Dg2ktvb4Ub7tNAHCGI6QSAeE2K9OY3FodLEz1Hma051r4uBp2dkcl6Si-VazRLK4p3iu_n-Yf" target="_blank" class="btn btn-danger rounded-0">Entrar</a>
-        </div>
-      </div>
+    <div class="container d-flex flex-row flex-wrap justify-content-between gap-4">
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/telefone-fixo.png" alt="telefone">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">Ramais</h5>
-          <a href="ramais/ramais.html" target="_self" class="btn btn-danger rounded-0">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/email.png" alt="email">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">E-mail</h5>
+          </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/suporte-online.png" alt="suporte técnico">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">Chamados TI</h5>
-          <a href="http://www.glpi.sudesb/glpi/index.php?noAUTO=1" target="_blank" class="btn btn-danger rounded-0">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/telefone-fixo.png" alt="telefone">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">Ramais</h5>
+          </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/sei-bahia.png" alt="Sei Bahia">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">SEI Bahia</h5>
-          <a href="https://seibahia.ba.gov.br/sip/login.php?sigla_orgao_sistema=GOVBA&sigla_sistema=SEI" target="_blank" class="btn btn-danger rounded-0">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/suporte-online.png" alt="suporte técnico">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">Chamados TI</h5>
+          </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/RH.png" alt="Rh Bahia">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">Rh Bahia</h5>
-          <a href="https://rhbahia.ba.gov.br/login" target="_blank" class="btn btn-danger rounded-0">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/sei-bahia.png" alt="Sei Bahia">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">SEI Bahia</h5>
+          </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/relatorio-diario.png" alt="Diário Oficial">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">Diário Oficial</h5>
-          <a href="https://dool.egba.ba.gov.br/" target="_blank" class="btn btn-danger rounded-0">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/RH.png" alt="Rh Bahia">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">Rh Bahia</h5>
+          </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/senha.png" alt="Senha">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">Redefinir Senha</h5>
-          <a href="https://portaldefacilidades.ba.gov.br/#/senha/redefinir" target="_blank" class="btn btn-danger rounded-0">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/relatorio-diario.png" alt="Diário Oficial">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">Diário Oficial</h5>
+          </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <img class="card-img-top w-25 mt-3 m-auto" src="img/ascom.png" alt="Ascom">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-4">Ascom</h5>
-          <a href="https://linktr.ee/Sudesb" target="_blank" class="btn btn-danger rounded-0">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/senha.png" alt="Senha">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">Redefinir Senha</h5>
+          </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card-color text-light w-25" style="width: 18rem;">
-        <div class="card-body text-center"> 
-          <img class="card-img-top w-25 mt-3 m-auto" src="img/manutencao.png" alt="Manutenção">
-          <h5 class="card-title mb-4" style="color: #0E4270;">Chamados COSEG</h5>
-          <a href="#" class="btn btn-dark rounded-0 disabled">Entrar</a>
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/ascom.png" alt="Ascom">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">Ascom</h5>
+          </div>
         </div>
-      </div>
+      </a>
+
+      <a href="" class="card-teste">
+        <div class="card card-color text-light" style="width: 18rem;">
+          <img class="card-img-top w-25 mt-3 m-auto" src="img/manutencao.png" alt="Ascom">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-4">COSEG</h5>
+          </div>
+        </div>
+      </a>
+      
     </div>
   </main>
 <br>
