--- a/07 Café/cores.html
+++ b/07 Café/cores.html
@@ -19,5 +19,6 @@
         <h1>O café do país</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi nemo totam, incidunt, rerum sunt ex exercitationem recusandae, perspiciatis ipsa rem optio debitis obcaecati beatae laborum iure a neque quaerat.</p>
     </main>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, exercitationem?</p>
 </body>
 </html>
